Solved 02 using flex box especially understanding the difference between justify content and align items

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,19 +1,41 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
 }
 
 .logo {
+  align-items: center;
   font-size: 48px;
   font-weight: 900;
   color: tomato;
   background: white;
-  padding: 4px 32px;
+  padding: 4px 10px;
+  margin: 10px;
+}
+
+.left-links,
+.right-links {
+  display: flex;
+  align-items: center;
+  flex: 1;
+  margin: 10px;
+}
+
+.right-links {
+  justify-content: right;
+}
+
+.left-links{
+  justify-content: left;
 }
 
 ul {
+  display: flex;
   /* this removes the dots on the list items*/
   list-style-type: none;
+  gap: 10px;
+  padding: 0px;
 }
 
 a {
